--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -11,388 +11,22 @@
  * It is generally better to create a new file per style scope.
  *
  *= require_tree .
- *= require icomoon
- *= require ionicons.min
  *= require_self
  */
-
 body {
-  padding-top: 100px !important;
+  padding-top: 3.5rem;
+}
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
-/* ==========================================================================
-   Wrap Sections
-   ========================================================================== */
-
-#headerwrap {
-  background: url(<%= asset_path 'header_bg.jpg' %>) no-repeat center top;
-  margin-top: -50px;
-  padding-top: 120px;
-  text-align: center;
-  background-attachment: relative;
-  background-position: center center;
-  min-height: 650px;
-  width: 100%;
-
-  -webkit-background-size: 100%;
-  -moz-background-size: 100%;
-  -o-background-size: 100%;
-  background-size: 100%;
-
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-#headerwrap h1 {
-  color: #ffffff;
-  margin-top: 90px;
-  padding-bottom: 30px;
-  letter-spacing: 8px;
-  font-size: 100px;
-  font-weight: bold;
-  text-shadow: 2px 2px 2px #000;
-}
-
-#headerwrap p {
-  color: #ffffff;
-  font-size: 40px;
-  font-weight: 400;
-  text-align: center;
-  line-height: 40px;
-  letter-spacing: 3px;
-  margin-left: 15px;
-  text-shadow: 1px 1px 1px #000;
-}
-
-#greywrap {
-  background: #f5f5f5;
-  margin-top: 0px;
-  padding-top: 40px;
-  border-bottom: 1px solid #ddd;
-  text-align: center;
-}
-
-#greywrap .callout {
-  margin-bottom: 20px;
-}
-
-#greywrap p {
-  margin-left: 30px;
-  margin-right: 30px;
-  letter-spacing: 1px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-}
-
-#greywrap .icon {
-  font-size: 60px;
-  line-height: 30px;
-  margin-bottom: 10px;
-}
-
-#footerwrap {
-  background: #2b2b2b;
-  margin-top: 0px;
-  padding-top: 40px;
-  padding-bottom: 20px;
-  border-bottom: 1px solid #ddd;
-  text-align: center;
-}
-
-#footerwrap h4 {
-  color: white;
-}
-
-
-/* ==========================================================================
-   Box Sections
-   ========================================================================== */
-
-.white h1 {
-  padding-top: 35px;
-}
-
-.white p {
-  padding-top: 25px;
-}
-
-/* Section Dividers */
-.section-divider {
-  z-index: 999;
-  width: 100%;
-  display: table;
-  max-height: 450px;
-  border-bottom: 2px solid #E6EAED;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
-  padding-top: 30px;
-  padding-bottom: 70px;
-  margin-top: 45px;
-
-
-  background-position: center center;
-
-  -webkit-background-size: 100%;
-  -moz-background-size: 100%;
-  -o-background-size: 100%;
-  background-size: 100%;
-
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-
-  background-attachment: relative;
-
-  text-align: center;
-}
-
-.textdivider h1 {
-  padding-top: 70px;
-  color: white;
-  font-size: 40px;
-}
-
-.textdivider p {
-  color: white;
-  font-size: 25px;
-}
-
-
-/* Section Dividers Backgrounds */
-
-.divider1 {
-  background-image: url(<%= asset_path 'divider1.jpg' %>)
-}
-
-.divider2 {
-  background-image: url(<%= asset_path 'divider2.jpg' %>)
-}
-
-.divider3 {
-  background-image: url(<%= asset_path 'divider3.jpg' %>);
-  margin-top: 0px;
-}
-
-.divider4 {
-  background-image: url(<%= asset_path 'divider4.jpg' %>)
-}
-
-.divider6 {
-  background-image: url(<%= asset_path 'divider6.jpg' %>)
-}
-
-
-/* ==========================================================================
-   Services Section
-   ========================================================================== */
-
-.service-trigger {
-  display: block;
-  position: relative;
-  margin-bottom: 15px;
-  color: white;
-  font-size: 20px;
-  text-align: center;
-  height: 168px;
-  cursor: pointer;
-  padding: 90px 20px 50px 20px;
-  border: none;
-  background: #333;
-}
-
-.service-trigger:before {
-  width: 100%;
-  top: 50px;
-  color: #3498db;
-  font-size: 36px;
-  text-align: center;
-  position: absolute;
-  left: 0;
-}
-
-.service-active .service-trigger {
-  background: #222;
-}
-
-.service-active p {
-  font-family: 'Lato', sans-serif;
-  padding-top: 10px;
-}
-
-.service-content {
-  padding: 15px 20px;
-  background: #e6eaed;
-  display: block;
-  height: auto
-}
-
-.service-content p:last-child {
-  margin: 0;
-}
-
-
-/* ==========================================================================
-   Image Mask
-   ========================================================================== */
-
-.grid figure {
-  margin: 0;
-  position: relative;
-}
-
-.grid figure img {
-  width: 100%;
-  display: block;
-  position: relative;
-}
-
-.grid figcaption {
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding: 20px;
-  color: #fff;
-  background: #3498db;
-}
-
-.grid figcaption h5 {
-  margin: 0;
-  padding-top: 0px;
-  padding-left: 20px;
-  padding-bottom: 5px;
-  color: #fff;
-  font-weight: 700;
-  text-align: left;
-  letter-spacing: 2px;
-
-}
-
-.grid figcaption a {
-  text-align: left;
-  padding: 5px 10px;
-  margin-left: 20px;
-  display: inline-block;
-  background: #2f2f2f;
-  color: #fff;
-  font-size: 13px;
-}
-
-/* Caption Style */
-.mask figure {
-  overflow: hidden;
-}
-
-.mask figure img {
-  -webkit-transition: -webkit-transform 0.4s;
-  -moz-transition: -moz-transform 0.4s;
-  transition: transform 0.4s;
-}
-
-.no-touch .mask figure:hover img,
-.mask figure.cs-hover img {
-  -webkit-transform: translateY(-30px);
-  -moz-transform: translateY(-30px);
-  -ms-transform: translateY(-30px);
-  transform: translateY(-30px);
-}
-
-.mask figcaption {
-  height: 50px;
-  width: 100%;
-  top: auto;
-  bottom: 0;
-  opacity: 0;
-  -webkit-transform: translateY(100%);
-  -moz-transform: translateY(100%);
-  -ms-transform: translateY(100%);
-  transform: translateY(100%);
-  -webkit-transition: -webkit-transform 0.4s, opacity 0.1s 0.3s;
-  -moz-transition: -moz-transform 0.4s, opacity 0.1s 0.3s;
-  transition: transform 0.4s, opacity 0.1s 0.3s;
-}
-
-.no-touch .mask figure:hover figcaption,
-.mask figure.cs-hover figcaption {
-  opacity: 1;
-  -webkit-transform: translateY(0px);
-  -moz-transform: translateY(0px);
-  -ms-transform: translateY(0px);
-  transform: translateY(0px);
-  -webkit-transition: -webkit-transform 0.4s, opacity 0.1s;
-  -moz-transition: -moz-transform 0.4s, opacity 0.1s;
-  transition: transform 0.4s, opacity 0.1s;
-}
-
-.mask figcaption a {
-  position: absolute;
-  top: 10px;
-  bottom: 10px;
-  right: 30px;
-}
-
-
-/* ==========================================================================
-   Blog Section
-   ========================================================================== */
-
-.blog-bg {
-  background: #2b2b2b;
-  padding-right: 0px;
-  padding-left: 0px;
-
-}
-
-.blog-bg h4 {
-  color: #dadada;
-  padding-top: 0px;
-}
-
-.blog-bg h5 {
-  color: #dadada;
-  font-size: 11px;
-}
-
-.blog-content {
-  padding-top: 10px;
-  background: #f2f2f2;
-}
-
-
-/* ==========================================================================
-   MEDIA QUERIES
-   ========================================================================== */
-
-
-@media screen and (max-width: 1050px), screen and (max-device-width: 1050px) {
-  body .header {
-    background-attachment: scroll;
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
   }
-}
-
-
-/*ipad portrait*/
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
-  .header {
-    background-attachment: scroll;
-  }
-}
-
-@media screen and (max-width: 769px) {
-  #headerwrap h1 {
-    font-size: 80px;
-  }
-
-  #headerwrap p {
-    font-size: 30px;
-    line-height: 38px;
-  }
-}
-
-.simple_form {
-  margin-bottom: 30px;
 }
