--- a/app/views/admin/shared/_menu.html.erb
+++ b/app/views/admin/shared/_menu.html.erb
@@ -1,22 +1,9 @@
-<li class="dropdown hidden-sm hidden-xs">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= t('shared.labels.admin') %>
-    <span class="caret"></span></a>
-  <ul class="dropdown-menu">
-    <li role="separator" class="divider"></li>
-    <li class="dropdown-header"><%= t('shared.labels.acl') %></li>
-    <li>
-      <%= link_to t('activerecord.models.user.other').mb_chars.titleize, admin_users_path %>
-    </li>
-    <li>
-      <%= link_to t('activerecord.models.account.other').mb_chars.titleize, admin_accounts_path %>
-    </li>
-    <li>
-      <%= link_to t('activerecord.models.role.other').mb_chars.titleize, admin_roles_path %>
-    </li>
-    <li role="separator" class="divider"></li>
-    <li class="dropdown-header"><%= t('shared.labels.other') %></li>
-    <li>
-      <%= link_to t('activerecord.models.subscription.other').mb_chars.titleize, admin_subscriptions_path %>
-    </li>
-  </ul>
+<li class="nav-item dropdown">
+  <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><%= t('shared.labels.admin') %></a>
+  <div class="dropdown-menu" aria-labelledby="dropdown01">
+    <%= link_to t('activerecord.models.user.other').mb_chars.titleize, admin_users_path, :class => 'dropdown-item', 'aria-labelledby'=>'dropdown01' %>
+    <%= link_to t('activerecord.models.account.other').mb_chars.titleize, admin_accounts_path, :class => 'dropdown-item' %>
+    <%= link_to t('activerecord.models.role.other').mb_chars.titleize, admin_roles_path, :class => 'dropdown-item' %>
+    <%= link_to t('activerecord.models.subscription.other').mb_chars.titleize, admin_subscriptions_path, :class => 'dropdown-item' %>
+  </div>
 </li>
