--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -21,7 +21,7 @@
 <!--
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to (t('shared.links.social').to_s + " #{provider.to_s.titleize}"), omniauth_authorize_path(resource_name, provider) %><br />
+    <%# link_to (t('shared.links.social').to_s + " #{provider.to_s.titleize}"), omniauth_authorize_path(resource_name, provider) %><br />
   <% end -%>
 <% end -%>
 -->
