--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,123 +2,82 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <!-- <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><%= content_for?(:title) ? yield(:title) : t('title') %></title>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
-  <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <script src="//code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="//stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-  <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'/>
-  <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'/>
+  <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track": "reload" %>
   <%= javascript_pack_tag "application", "data-turbolinks-track": "reload" %>
-
-  <!--link rel="apple-touch-icon" sizes="57x57" href="/_i/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="/_i/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="/_i/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="/_i/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="/_i/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="/_i/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="/_i/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/_i/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/_i/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="/_i/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/_i/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="/_i/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/_i/favicon-16x16.png"-->
-  <link rel="manifest" href="/_i//manifest.json">
-  <meta name="msapplication-config" content="/_i/browserconfig.xml"/>
-  <meta name="msapplication-TileColor" content="#000000">
-  <meta name="msapplication-TileImage" content="/_i/ms-icon-144x144.png">
-  <meta name="theme-color" content="#000000">
-
-</head>
+<head>
 <body>
 
-<div id="navbar-main">
-  <!-- Fixed navbar -->
-  <div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <% ttl = content_for?(:title) ? yield(:title) : t('title') %>
-        <a class="navbar-brand" href="/<%= I18n.locale %>/">
-          Pestulon
-        </a>
-      </div>
-      <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav">
-          <li><a href="#home" class="smoothScroll">Home</a></li>
-          <li><a href="#about" class="smoothScroll"> About</a></li>
-          <li><a href="#services" class="smoothScroll"> Services</a></li>
-          <li><a href="#team" class="smoothScroll"> Team</a></li>
-          <li><a href="#portfolio" class="smoothScroll"> Portfolio</a></li>
-          <li><a href="#blog" class="smoothScroll"> Blog</a></li>
-          <li><a href="#contact" class="smoothScroll"> Contact</a></li>
-          <% if user_signed_in? %>
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+  <% ttl = content_for?(:title) ? yield(:title) : t('title') %>
+  <a class="navbar-brand" href="/<%= I18n.locale %>/"><%=ttl%></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-          <% end %>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <% if user_signed_in? %>
-            <% if current_user.role? :admin %>
-              <%= render 'admin/shared/menu' %>
-            <% end %>
-            <% if current_user.role? :owner %>
-              <li>
-                <%= link_to t('activerecord.models.account.one').mb_chars.titleize, account_index_path %>
-              </li>
-            <% end %>
-            <li<%= ' class="active"'.html_safe if controller.controller_name == 'invitations' %>>
-              <%= link_to t('shared.labels.invite'), new_invitation_path(:user) %>
-            </li>
-            <li>
-              <%= link_to image_tag(avatar_url(current_user.email), size: '20x20', alt: current_user.email, title: current_user.email), edit_user_registration_path %>
-            </li>
-            <li>
-              <%= link_to t('shared.labels.logout'), destroy_user_session_path, :method => :delete %>
-            </li>
-          <% else %>
-            <li><a><%= t 'shared.labels.login' %>:</a></li>
-            <li<%= ' class="active"'.html_safe if controller.controller_name == 'sessions' %>>
-              <%= link_to '', new_user_session_path, :class => 'ion-ios-email-outline' %>
-            </li>
-            <li><%= link_to '', user_twitter_omniauth_authorize_path, :class => 'ion-social-twitter-outline' %></li>
-            <li><%= link_to '', user_facebook_omniauth_authorize_path, :class => 'ion-social-facebook-outline' %></li>
-            <li<%= ' class="active"'.html_safe if controller.controller_name == 'registrations' %>>
-              <%= link_to t('shared.labels.registration'), new_user_registration_path %>
-            </li>
-          <% end %>
-        </ul>
-      </div><!--/.nav-collapse -->
+  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active"><a class="nav-link" href="/<%= I18n.locale %>/">Home</a></li>
+      <li class="nav-item"><a class="nav-link" href="/en/pages/help">Help</a></li>
+      <li class="nav-item"><a class="nav-link" href="/en/pages/terms">Terms</a></li>
+      <li class="nav-item"><a class="nav-link" href="/en/pages/privacy">Privacy</a></li>
+      <li class="nav-item"><a class="nav-link" href="/en/pages/pricing">Pricing</a></li>
+      <li class="nav-item"><a class="nav-link" href="/en/pages/contacts">Contacts</a></li>
+    </ul>
+    <ul class="navbar-nav justify-content-end">
+      <% if user_signed_in? %>
+        <% if current_user.role? :admin %>
+          <%= render 'admin/shared/menu' %>
+        <% end %>
+        <% if current_user.role? :owner %>
+          <li class="nav-item">
+            <%= link_to t('activerecord.models.account.one').mb_chars.titleize, account_index_path, :class => 'nav-link' %>
+          </li>
+      <% end %>
+      <li class="nav-item<%= '  active'.html_safe if controller.controller_name == 'invitations' %>">
+        <%= link_to t('shared.labels.invite'), new_invitation_path(:user), :class => 'nav-link' %>
+      </li>
+      <!--li class="nav-item">
+        <%# link_to image_tag(avatar_url(current_user.email), size: '20x20', alt: current_user.email, title: current_user.email), edit_user_registration_path %>
+      </li-->
+      <li class="nav-item">
+        <%= link_to t('shared.labels.logout'), destroy_user_session_path, :method => :delete, :class => 'nav-link' %>
+      </li>
+      <% else %>
+      <li class="nav-item"><a class="nav-link"><%= t 'shared.labels.login' %>:</a></li>
+      <li class="nav-item<%= ' active'.html_safe if controller.controller_name == 'sessions' %>">
+        <%= link_to 'a', new_user_session_path, :class => 'nav-link' %>
+      </li>
+      <li class="nav-item"><%= link_to 'a', user_twitter_omniauth_authorize_path, :class => 'nav-link' %></li>
+      <li class="nav-item"><%= link_to 'a', user_facebook_omniauth_authorize_path, :class => 'nav-link' %></li>
+      <li class="nav-item<%= ' active'.html_safe if controller.controller_name == 'registrations' %>">
+        <%= link_to t('shared.labels.registration'), new_user_registration_path, :class => 'nav-link' %>
+      </li>
+      <% end %>
+      </ul>
     </div>
-  </div>
-</div>
+</nav>
 
-<% if controller.controller_name == "pages" %>
-  <%= yield %>
-<% else %>
+<main role="main">
   <div class="wrapper wrapper-tall">
     <div class="container">
       <%= yield %>
     </div>
   </div>
-<% end %>
+</main>
 
-<div id="footerwrap">
-  <div class="container">
-    <h4>Created by <a href="http://blacktie.co">BlackTie.co</a> - Copyright 2014</h4>
-  </div>
-</div>
+<footer class="container-fluid">
+  <p>&copy; Company 2017-<%= Date.today.year %></p>
+</footer>
+
+<script src="//code.jquery.com/jquery-3.4.1.min.js" data-turbolinks-eval="false" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<script src="//cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" data-turbolinks-eval="false" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="//stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" data-turbolinks-eval="false" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
 <% if Rails.env.production? %>
   <script>
       // google analytics
